# k-cli

./: .coverage  .gitignore  BUGFIX_LOG.md  README.md  SKILL.md  k-skill-cli-anything-architecture.md  pyproject.toml
LOG/: 2026-05-20.md
cli_anything/k_skill/: __init__.py  cli.py  dependency.py  loader.py  local_mcp_bridge.py  mcp_client.py  output.py  proxy.py  runner.py
cli_anything/k_skill/skills/delivery/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/document/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/finance/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/life/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/map/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/market/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/other/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/realestate/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/search/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/shopping/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/sports/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/transit/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/travel/: __init__.py  manifest.yaml
cli_anything/k_skill/skills/weather/: __init__.py  manifest.yaml
docs/: upstream-sync-guide.md
scripts/: generate_phase3_skills.py  generate_proxy_skills.py  sync-from-k-skill.sh
tests/: test_dependency.py  test_loader.py  test_map.py  test_mcp_client.py  test_output.py  test_phase2_skills.py  test_proxy.py  test_ssrf.py
