[project]
name = "cli-anything-k-skill"
version = "0.1.0"
description = "CLI-Anything harness for k-skill: 86+ Korean utility skills for all AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
k-cli = "cli_anything.k_skill.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli_anything*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
