[project]
name = "k-skill-cli"
version = "2026.05.21.1"
description = "K-Skill CLI: CLI-Anything wrapper for NomaDamas/k-skill — 86 Korean utility skills for all AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0,<9.0",
    "httpx>=0.25,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
k-skill = "cli_anything.k_skill.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli_anything*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
